[package]
name = "intercom-webhook-handler"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.1"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }
aws-sdk-s3 = "1.34.0"
aws-sdk-sqs = "1.29.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
lambda_runtime = "0.11.2"
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.23.0", features = ["metrics", "logs", "rt-tokio"] }
opentelemetry = { version = "0.23.0", features = ["metrics", "logs"] }
paste = "1.0.15"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["macros", "tracing"] }
tracing-opentelemetry = "0.24.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
